# netcdf_flask_demo

./: README.md  demo.py  demo.txt  pyproject.toml  slider_efit.py
data/: 97708_efitOut.nc  97809_efitOut.nc
